[gd_scene load_steps=9 format=3 uid="uid://bn52kwycifxlc"]

[ext_resource type="Script" path="res://Hud/Thingy/thingy_container.gd" id="1_2egv3"]
[ext_resource type="PackedScene" uid="uid://btmej8oakg4f1" path="res://Hud/Thingy/thingy_vico.tscn" id="2_y25jd"]
[ext_resource type="PackedScene" uid="uid://dky60pdpk0ffa" path="res://Hud/purchase_button.tscn" id="4_7f4hf"]
[ext_resource type="Texture2D" uid="uid://c81tbq6j5hhl6" path="res://Art/Icons/Hud/arrow-up-s-line.png" id="5_jrt6d"]
[ext_resource type="Texture2D" uid="uid://d328m6cljbdnh" path="res://Art/Icons/Hud/arrow-down-s-line.png" id="5_vkcv4"]
[ext_resource type="Texture2D" uid="uid://dsiwa3s1c7mj" path="res://Art/Icons/Hud/Up Skip.png" id="6_5vs1g"]
[ext_resource type="Texture2D" uid="uid://td87cqg3l2dp" path="res://Art/Icons/Hud/Down Skip.png" id="8_dgp3g"]
[ext_resource type="PackedScene" uid="uid://f0bw1mm367n6" path="res://Hud/Thingy/thingy_widget.tscn" id="8_lyght"]

[node name="ThingyContainer" type="MarginContainer"]
offset_right = 1279.0
offset_bottom = 721.0
script = ExtResource("1_2egv3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 16
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ThingyContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 10

[node name="th0" parent="HBoxContainer/VBoxContainer/ThingyContainer" instance=ExtResource("2_y25jd")]
unique_name_in_owner = true
layout_mode = 2

[node name="th1" parent="HBoxContainer/VBoxContainer/ThingyContainer" instance=ExtResource("2_y25jd")]
unique_name_in_owner = true
custom_minimum_size = Vector2(170, 0)
layout_mode = 2

[node name="th2" parent="HBoxContainer/VBoxContainer/ThingyContainer" instance=ExtResource("2_y25jd")]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="th3" parent="HBoxContainer/VBoxContainer/ThingyContainer" instance=ExtResource("2_y25jd")]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="th4" parent="HBoxContainer/VBoxContainer/ThingyContainer" instance=ExtResource("2_y25jd")]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="th5" parent="HBoxContainer/VBoxContainer/ThingyContainer" instance=ExtResource("2_y25jd")]
unique_name_in_owner = true
custom_minimum_size = Vector2(170, 0)
layout_mode = 2

[node name="th6" parent="HBoxContainer/VBoxContainer/ThingyContainer" instance=ExtResource("2_y25jd")]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer4" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ToTop" parent="HBoxContainer/VBoxContainer4/VBoxContainer3" instance=ExtResource("4_7f4hf")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
icon = ExtResource("6_5vs1g")
remove_cost_components = true

[node name="Up" parent="HBoxContainer/VBoxContainer4/VBoxContainer3" instance=ExtResource("4_7f4hf")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
icon = ExtResource("5_jrt6d")
remove_cost_components = true

[node name="Down" parent="HBoxContainer/VBoxContainer4/VBoxContainer3" instance=ExtResource("4_7f4hf")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
icon = ExtResource("5_vkcv4")
remove_cost_components = true

[node name="ToBot" parent="HBoxContainer/VBoxContainer4/VBoxContainer3" instance=ExtResource("4_7f4hf")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
icon = ExtResource("8_dgp3g")
remove_cost_components = true

[node name="ThingyWidget" parent="." instance=ExtResource("8_lyght")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[connection signal="pressed" from="HBoxContainer/VBoxContainer4/VBoxContainer3/ToTop" to="." method="_on_to_top_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer4/VBoxContainer3/Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer4/VBoxContainer3/Down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer4/VBoxContainer3/ToBot" to="." method="_on_to_bot_pressed"]
